force-app/integration/default/objects/Test_Parent_Object__c/Test_Parent_Object__c.object-meta.xml
<CustomObject>
    <label>Test Parent Object</label>
    <nameField>
        <label>Test Parent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Parent Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>