force-app/integration/default/objects/Test_Parent_Object__c/fields/Completion_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Completion_Percentage__c</fullName>
    <label>Completion Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>