force-app/integration/default/objects/Test_Parent_Object__c/fields/Due_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Due_DateTime__c</fullName>
    <label>Due Date/Time</label>
    <type>DateTime</type>
</CustomField>