force-app/integration/default/objects/Test_Parent_Object__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Important</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>